--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,43 +1,40 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta charset="utf-8" />
 	<meta name="author" content="Rodrigo Moura da Costa" />
-	<meta name="keywords" content="web development, java, php, xhtml, css, javascript, linux, unix, perl, shell script, mysql" />
 	<meta name="description" content="Resume of Rodrigo Moura da Costa, web developer." />
 	<meta name="robots" content="all" />
 	<title>Rodrigo Moura da Costa</title>
 	<link rel="stylesheet" type="text/css" href="css/word.css" title="word" />
 	<link rel="alternate stylesheet" type="text/css" href="css/black.css" title="black" />
-	<script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
 
 <div id="box">
-	<div id="header">
+	<header>
 		<h1>Rodrigo Moura da Costa</h1>
 		<address>chuvadasquatro at yahoo dot com dot br</address>
-	</div>
-	<div id="menu">
+	</header>
+	<nav id="menu">
 		<ul>
-			<li id="info"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Personal info</a></li>
-			<li id="education"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Education</a></li>
-			<li id="courses"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Courses</a></li>
-			<li id="languages"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Languages</a></li>
-			<li id="skills"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Skills</a></li>
-			<li id="interests"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Interests</a></li>
-			<li id="experiences"><a href="javascript:void(0)" onclick="getPage(this.parentNode.id)">Professional experiences</a></li>
+			<li id="info"><a href="#">Personal info</a></li>
+			<li id="education"><a href="#">Education</a></li>
+			<li id="courses"><a href="#">Courses</a></li>
+			<li id="languages"><a href="#">Languages</a></li>
+			<li id="skills"><a href="#">Skills</a></li>
+			<li id="interests"><a href="#">Interests</a></li>
+			<li id="experiences"><a href="#">Professional experiences</a></li>
 		</ul>
-	</div>
-	<div id="content"></div>
-	<div id="footer">
+	</nav>
+	<main id="content"></main>
+	<footer>
 		<div id="styleswitcher">
-			<a href="javascript:void(0)" onclick="setActiveStyle('word')"><img src="img/word/icon.gif" alt="Word" /></a>
-			<a href="javascript:void(0)" onclick="setActiveStyle('black')"><img src="img/black/icon.gif" alt="Black" /></a>
+			<a id="word" href="#"><img src="img/word/icon.gif" alt="Word" /></a>
+			<a id="black" href="#"><img src="img/black/icon.gif" alt="Black" /></a>
 			<span id="styleCredits"></span>
 		</div>
 		<div id="download">
@@ -47,8 +44,11 @@
 			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
 		</div>
-	</div>
+	</footer>
 </div>
+
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/v2.js"></script>
 
 </body>
 
