--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,14 +35,10 @@
 		<div id="styleswitcher">
 			<a id="word" href="#"><img src="img/word/icon.gif" alt="Word" /></a>
 			<a id="black" href="#"><img src="img/black/icon.gif" alt="Black" /></a>
-			<span id="styleCredits"></span>
+			<span id="stylecredits"></span>
 		</div>
 		<div id="download">
 			<a href="download/resume-rodrigo-costa.pdf">download PDF version</a>
-		</div>
-		<div id="w3cicons">
-			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
 		</div>
 	</footer>
 </div>
