Rodrigo-Costa.pdf to download moved to rhcloud.com.

--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
 			<span id="stylecredits"></span>
 		</div>
 		<div id="download">
-			<a href="download/resume-rodrigo-costa.pdf">download PDF version</a>
+			<a href="#">download PDF version</a>
 		</div>
 	</footer>
 </div>
