Changes for v2 of cv-service-spring.

--- a/web/index.html
+++ b/web/index.html
@@ -23,11 +23,9 @@
 		<ul>
 			<li id="info"><a href="#">Personal info</a></li>
 			<li id="education"><a href="#">Education</a></li>
-			<li id="courses"><a href="#">Courses</a></li>
-			<li id="languages"><a href="#">Languages</a></li>
+			<li id="experience"><a href="#">Professional experience</a></li>
 			<li id="skills"><a href="#">Skills</a></li>
-			<li id="interests"><a href="#">Interests</a></li>
-			<li id="experiences"><a href="#">Professional experiences</a></li>
+			<li id="languages"><a href="#">Languages</a></li>
 		</ul>
 	</nav>
 	<main id="content"></main>
