New web sources page.

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
 			<li id="experience"><a href="#">Professional experience</a></li>
 			<li id="skills"><a href="#">Skills</a></li>
 			<li id="languages"><a href="#">Languages</a></li>
+			<li id="sources"><a href="#">Web sources</a></li>
 		</ul>
 	</nav>
 	<main id="content"></main>
