Menu loaded dynamically, links fixed, service URL set according to enviroment.

--- a/web/index.html
+++ b/web/index.html
@@ -19,16 +19,7 @@
 		<h1>Rodrigo Moura da Costa</h1>
 		<address>chuvadasquatro at yahoo dot com dot br</address>
 	</header>
-	<nav id="menu">
-		<ul>
-			<li id="info"><a href="#">Personal info</a></li>
-			<li id="education"><a href="#">Education</a></li>
-			<li id="experience"><a href="#">Professional experience</a></li>
-			<li id="skills"><a href="#">Skills</a></li>
-			<li id="languages"><a href="#">Languages</a></li>
-			<li id="sources"><a href="#">Web sources</a></li>
-		</ul>
-	</nav>
+	<nav id="menu"><ul></ul></nav>
 	<main id="content"></main>
 	<footer>
 		<div id="styleswitcher">
