--- a/web/index.html
+++ b/web/index.html
@@ -33,8 +33,12 @@
 	</footer>
 </div>
 
-<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
-<script type="text/javascript" src="js/v2.js"></script>
+<script type="text/javascript" src="lib/jquery-1.11.3.min.js"></script>
+
+<script type="text/javascript" src="js/Menu.js"></script>
+<script type="text/javascript" src="js/Content.js"></script>
+<script type="text/javascript" src="js/StyleSwitcher.js"></script>
+<script type="text/javascript" src="js/App.js"></script>
 
 </body>
 
