--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 	<title>Rodrigo Moura da Costa</title>
 	<link rel="stylesheet" type="text/css" href="css/word.css" title="word" />
 	<link rel="alternate stylesheet" type="text/css" href="css/black.css" title="black" />
+	<link rel="alternate stylesheet" type="text/css" href="css/splash.css" title="splash" />
 </head>
 
 <body>
@@ -25,6 +26,7 @@
 		<div id="styleswitcher">
 			<a id="word" href="#"><img src="img/word/icon.gif" alt="Word" /></a>
 			<a id="black" href="#"><img src="img/black/icon.gif" alt="Black" /></a>
+			<a id="splash" href="#"><img src="img/splash/icon.gif" alt="Splash" /></a>
 			<span id="stylecredits"></span>
 		</div>
 		<div id="download">
