New design Cidade added, titles added to all style switcher images, page description updated.

--- a/web/index.html
+++ b/web/index.html
@@ -5,12 +5,12 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="author" content="Rodrigo Moura da Costa" />
-	<meta name="description" content="Resume of Rodrigo Moura da Costa, web developer." />
+	<meta name="description" content="Resume of Rodrigo Moura da Costa, software developer." />
 	<meta name="robots" content="all" />
 	<title>Rodrigo Moura da Costa</title>
 	<link rel="stylesheet" type="text/css" href="css/word.css" title="word" />
+	<link rel="alternate stylesheet" type="text/css" href="css/cidade.css" title="cidade" />
 	<link rel="alternate stylesheet" type="text/css" href="css/black.css" title="black" />
-	<link rel="alternate stylesheet" type="text/css" href="css/splash.css" title="splash" />
 </head>
 
 <body>
@@ -20,13 +20,15 @@
 		<h1>Rodrigo Moura da Costa</h1>
 		<address>chuvadasquatro at yahoo dot com dot br</address>
 	</header>
-	<nav id="menu"><ul></ul></nav>
-	<main id="content"></main>
+	<div id="middle">
+		<nav id="menu"><ul></ul></nav>
+		<main id="content"></main>
+	</div>
 	<footer>
 		<div id="styleswitcher">
-			<a id="word" href="#"><img src="img/word/icon.gif" alt="Word" /></a>
-			<a id="black" href="#"><img src="img/black/icon.gif" alt="Black" /></a>
-			<a id="splash" href="#"><img src="img/splash/icon.gif" alt="Splash" /></a>
+			<a id="word" href="#"><img src="img/word/icon.gif" alt="Word" title="Word by Rodrigo Costa" /></a>
+			<a id="cidade" href="#"><img src="img/cidade/icon.gif" alt="Cidade" title="Cidade by Leandro Frazão" /></a>
+			<a id="black" href="#"><img src="img/black/icon.gif" alt="Black" title="Black by Rodrigo Costa" /></a>
 			<span id="stylecredits"></span>
 		</div>
 		<div id="download">
