New design Lines added.

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/word.css" title="word" />
 	<link rel="alternate stylesheet" type="text/css" href="css/cidade.css" title="cidade" />
 	<link rel="alternate stylesheet" type="text/css" href="css/black.css" title="black" />
+	<link rel="alternate stylesheet" type="text/css" href="css/lines.css" title="lines" />
 </head>
 
 <body>
@@ -29,6 +30,7 @@
 			<a id="word" href="#"><img src="img/word/icon.gif" alt="Word" title="Word by Rodrigo Costa" /></a>
 			<a id="cidade" href="#"><img src="img/cidade/icon.gif" alt="Cidade" title="Cidade by Leandro Frazão" /></a>
 			<a id="black" href="#"><img src="img/black/icon.gif" alt="Black" title="Black by Rodrigo Costa" /></a>
+			<a id="lines" href="#"><img src="img/lines/icon.gif" alt="Lines" title="Lines by Rodrigo Costa" /></a>
 			<span id="stylecredits"></span>
 		</div>
 		<div id="download">
